oppilas näkee omat tiedot ja pelitulokset jotenkin

--- a/templates/frontPage.html
+++ b/templates/frontPage.html
@@ -20,7 +20,7 @@
                 class="icon-image" alt="Avatar" />
           </button>
           <div class="dropdown-content">
-            <a href="#">Profiili</a>
+            <a href="{{ url_for('student_info') }}">Profiili</a>
             <a href="#">Pelitulokset</a>
             <a href="{{ url_for('logout') }}">Kirjaudu ulos</a>
           </div>
