--- a/templates/profilePictureSelection.html
+++ b/templates/profilePictureSelection.html
@@ -132,7 +132,7 @@
   <div class="header-bottom">
     <div class="nav-buttons">
       <!-- takaisin nappi -->
-      <button class="coming-soon-btn" onclick=window.location.href="{{ url_for('students_info') }}">Takaisin</button>
+      <button class="coming-soon-btn" onclick=window.location.href="{{ url_for('student_info') }}">Takaisin</button>
       <!-- Tulossa-nappi -->
       
     </div>
