Muokattu oppilaan omien tietojen näkymää

--- a/templates/profilePictureSelection.html
+++ b/templates/profilePictureSelection.html
@@ -38,7 +38,7 @@
   }
 */
   .container {
-    height: 90%;
+    height: 100%;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -151,7 +151,7 @@
                       <img class="site-title" src="{{ url_for('static', filename='Kuvat/mattiAvatar.png') }}" alt="Logo valkoinen">
                     </div>
                     <div class="small-circle">
-                      <img class="site-title" src="{{ url_for('static', filename='Kuvat/bunnyAvatr.png') }}" alt="Logo valkoinen">
+                      <img class="site-title" src="{{ url_for('static', filename='Kuvat/bunnyAvatar.png') }}" alt="Logo valkoinen">
                     </div>
                     
                     <div class="small-circle">
@@ -161,12 +161,13 @@
                       <img class="site-title" src="{{ url_for('static', filename='Kuvat/doggyAvatar.png') }}" alt="Logo valkoinen">
                     </div>
                 </div>
-            </div>
-            <div class="buttons">
+                <div class="buttons">
                 
                 
-                <button>Tallenna</button>
+                  <button class="coming-soon-btn">Tallenna</button>
+              </div>
             </div>
+           
         </div>
     </div>
 </body>
